fix overflow

--- a/scss/stylesheets/index.scss
+++ b/scss/stylesheets/index.scss
@@ -66,7 +66,7 @@ body {
 // Timeline
 .left-section {
   @extend .container;
-  
+
   #timeline {
     @extend .row;
     .item {
@@ -74,7 +74,7 @@ body {
       
       min-height:    400px;
       max-height:    400px;
-      overflow-y:    hidden;
+      overflow-x:    hidden;
       margin-bottom: $M;
 
       @media screen and (max-width: $MIN-MD) {
